# long-lived-tracking-challenge

./: README.md
LocalTrackReco/MooreBaseline/: CMakeLists.txt  Makefile  run
LocalTrackReco/MooreBaseline/Pr/PrKernel/: CMakeLists.txt
LocalTrackReco/MooreBaseline/Pr/PrMCTools/: CMakeLists.txt
LocalTrackReco/MooreBaseline/Pr/PrMCTools/src/: PrCheatedLongTracking.cpp  PrCheatedVP.cpp  PrDebugTrackingLosses.cpp  PrDebugTrackingTool.cpp  PrDownstreamDumper.cpp  PrFTHitsChecker.cpp  PrMCDebugForwardTool.cpp  PrMCDebugMatchToolNN.cpp  PrTStationDebugTool.cpp  PrTrackCounter.h  PrTrackRecoDumper.cpp  PrUTCounter.h  PrVeloUTChecker.cpp
LocalTrackReco/MooreBaseline/Pr/PrVPRetina/: CMakeLists.txt
LocalTrackReco/MooreBaseline/Pr/SciFiTrackForwarding/: CMakeLists.txt
LocalTrackReco/MooreBaseline/Tr/ParameterizedKalman/: CMakeLists.txt
LocalTrackReco/MooreBaseline/Tr/PatChecker/: CMakeLists.txt
LocalTrackReco/MooreBaseline/Tr/TrackCheckers/: CMakeLists.txt
LocalTrackReco/MooreBaseline/Tr/TrackInterfaces/: CMakeLists.txt
LocalTrackReco/MooreBaseline/Tr/TrackMonitors/: CMakeLists.txt
LocalTrackReco/MooreBaseline/Tr/TrackProjectors/: CMakeLists.txt
LocalTrackReco/MooreBaseline/Tr/TrackTools/: CMakeLists.txt
LocalTrackReco/MooreBaseline/Tr/TrackUtils/: CMakeLists.txt
LocalTrackReco/MooreEnhanced/: CMakeLists.txt  build.conf  run  searchPath.py  toolchain.cmake
LocalTrackReco/MooreEnhanced/Pr/PrAlgorithms/: CMakeLists.txt
LocalTrackReco/MooreEnhanced/Pr/PrConverters/: CMakeLists.txt
LocalTrackReco/MooreEnhanced/Pr/PrFitParams/: CMakeLists.txt
LocalTrackReco/MooreEnhanced/Pr/PrPixel/: CMakeLists.txt
LocalTrackReco/MooreEnhanced/Pr/PrVeloUT/: CMakeLists.txt
LocalTrackReco/MooreEnhanced/Tr/PatFitParams/: CMakeLists.txt
LocalTrackReco/MooreEnhanced/Tr/PatPV/: CMakeLists.txt
LocalTrackReco/MooreEnhanced/Tr/PrKalmanFilter/: CMakeLists.txt
LocalTrackReco/MooreEnhanced/Tr/TrackAssociators/: CMakeLists.txt
LocalTrackReco/MooreEnhanced/Tr/TrackExtrapolators/: CMakeLists.txt
LocalTrackReco/MooreEnhanced/Tr/TrackFitEvent/: CMakeLists.txt
LocalTrackReco/MooreEnhanced/Tr/TrackFitter/: CMakeLists.txt
LocalTrackReco/MooreEnhanced/Tr/TrackKernel/: CMakeLists.txt
LocalTrackReco/MooreEnhanced/Tr/TrackMCTools/: CMakeLists.txt
LocalTrackReco/MooreEnhanced/cmake/: MooreEnhancedDependencies.cmake
LocalTrackReco/OptionFiles/: Baseline.py
LocalTrackReco/Output/: moore_thresholds.sh  plot_kpis.py
LocalTrackReco/Output/dumper/Enhance/: Dumper_recTracks_0.61.root  Dumper_recTracks_0.62.root  Dumper_recTracks_0.63.root  Dumper_recTracks_0.64.root  Dumper_recTracks_0.65.root  Dumper_recTracks_0.66.root  Dumper_recTracks_0.67.root  Dumper_recTracks_0.68.root  Dumper_recTracks_0.69.root  Dumper_recTracks_0.70.root  Dumper_recTracks_0.71.root  Dumper_recTracks_0.72.root  Dumper_recTracks_0.73.root  Dumper_recTracks_0.74.root  Dumper_recTracks_0.75.root  Dumper_recTracks_0.76.root  Dumper_recTracks_0.77.root  (+22 more)
(+680 files in other folders)
